--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-    YOGA
+    <header>
+        <img src="./img/yoga.png" alt="Logo">
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Instructors</a>
+            <a href="#">Schedule</a>
+            <a href="#">About studio</a>
+            <a href="#">Blog</a>
+            <a href="#">Contacts</a>
+        </nav>
+    </header>
+    <main>
+        <div>
+            <h1>Welcome to Yoga <span>Lifestyle</span> studio!</h1>
+            <p>We are trying very hard to create all the conditions so that your stay in the studio is comfortable and favorable for development, creativity and creation.</p>
+            <a href="#">Sign up for classes</a>
+            <img src="./img/yogapose.png" alt="Yoga pose">
+        </div>
+    </main>
 </body>
 </html>
